# tarifhub

./: .env.example  .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  LEARNINGS.md  LICENSE  NEXT_STEPS.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  settings.json
.claude/: settings.json
.claude/agents/: codex-reviewer.md  determinism-auditor.md  e2e-tester.md  grade-auditor.md  implementer.md  security-reviewer.md  verifier.md
.claude/commands/: arc42-update.md  (+3 more)
aise-harness/: CLAUDE_CODE_SETUP.md  NEXT_STEPS.md  README.md  START_GUIDE.md
db/: schema.sql
deploy/: docker-compose.e5.yml  docker-compose.yml
docs/: CLAUDE_CODE_SETUP.md  START_GUIDE.md  criterion-map.md  index.md  mkdocs.yml  report-structure.md  selbststaendigkeitserklaerung.md  summary.md  zusammenfassung-de.md
knowledge/: 00-index.md  README.md  ai-workflow.md
prompts/: 00_one_shot_greenfield.md  00b_cas_one_shot.md  01_foundation_reconciliation.md  02_spec_design_artifacts.md  03_second_source_fhir.md  04_services_depth_mcp.md  05_tarifguard_console.md  06_validation_evidence.md  07_documentation_fazit.md  08_ai_se_framework.md  09_diagrams.md  10_slide_deck.md  11_cas_score.md  12_approval_bridge.md  13_cas_docfix.md  14_fully_english.md  15_c5_interface.md  16_no_mix_english.md  17_final_fixes.md  README.md  chore_public_readiness.md
scripts/: bootstrap-github.sh  init_db.sh  run_ingestion.sh  run_serving.sh  setup-claude-code.sh  ship.sh
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/sample-data/input/: bag_epl_sample.ndjson  eal_sample.xlsx  epl_sample.json
services/ingestion/src/tarifhub_ingest/: __init__.py  cli.py  config.py  errors.py  main.py  review.py  review_service.py
services/ingestion/src/tarifhub_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/ingestion/src/tarifhub_ingest/adapters/: __init__.py  _http.py  bag_eal.py  bag_epl.py
services/ingestion/src/tarifhub_ingest/audit/: __init__.py  audit_logger.py
services/ingestion/src/tarifhub_ingest/confidence/: __init__.py  scorer.py
services/ingestion/src/tarifhub_ingest/embeddings/: __init__.py  embedder.py
services/ingestion/src/tarifhub_ingest/ingestion/: __init__.py  fill_reuse.py  pipeline.py  source_loader.py
services/ingestion/src/tarifhub_ingest/mappers/: __init__.py  tariff_mapper.py
services/ingestion/src/tarifhub_ingest/models/: __init__.py  tariff_model.py
services/ingestion/src/tarifhub_ingest/parsers/: __init__.py  fhir_parser.py  xlsx_parser.py
services/ingestion/src/tarifhub_ingest/storage/: __init__.py  db.py  tariff_repository.py
services/ingestion/src/tarifhub_ingest/validators/: __init__.py  tariff_validator.py
services/ingestion/src/tarifhub_ingest/versioning/: __init__.py  freeze_record.py
services/ingestion/tests/: _parity.py  conftest.py  test_ai_mapper.py  test_api.py  test_audit_pg_roundtrip.py  test_bag_eal.py  test_bag_epl.py  test_both_sources.py  test_config.py  test_determinism_boundary.py  test_embedder.py  test_error_envelope.py  test_fill_reuse.py  test_freeze_record.py  test_mapper.py  test_mapper_coercion.py  test_openapi_discipline.py  test_parser.py  test_read_parity.py  test_refill_surfaces.py  test_repository_versioning.py  test_review_api.py  test_review_boundary.py  test_review_contract.py  test_scale_contract.py  test_storage_db.py  test_validator.py  test_value_path_boundary.py
services/ingestion/tests/fixtures/eal/: analysenliste_2026-01-01_fixture.xlsx  make_fixture.py
services/ingestion/tests/fixtures/epl/: README.md  foph-sl-export-20260601_fixture.ndjson  make_fixture.py
services/intelligence/: Dockerfile  README.md  pyproject.toml
services/intelligence/src/tarifiq/: __init__.py  config.py  errors.py  main.py
services/intelligence/src/tarifiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/intelligence/src/tarifiq/crosswalk/: __init__.py  tarmed_tardoc.py
services/intelligence/src/tarifiq/models/: __init__.py  rule_model.py
services/intelligence/src/tarifiq/rules/: __init__.py  combinability.py
services/intelligence/src/tarifiq/store/: __init__.py  frozen_client.py
services/intelligence/src/tarifiq/validators/: __init__.py  rule_validator.py
services/intelligence/tests/: test_combinability.py  test_combinability_systems.py  test_config.py  test_config_env.py  test_crosswalk.py  test_determinism_boundary.py  test_error_envelope.py  test_frozen_client.py  test_main_api.py  test_openapi_discipline.py  test_rule_validator.py  test_validate.py
services/mcp/: Dockerfile  README.md  config.py  pyproject.toml  server.py
services/mcp/src/tarifhub_mcp/: __init__.py  config.py  server.py
services/mcp/tests/: conftest.py  test_config.py  test_integration.py  test_tools.py
services/serving/: Dockerfile  README.md  openapi.json  pom.xml  pyproject.toml
services/serving/src/main/java/ch/tarifhub/serving/: TariffRecordEntity.java  TariffRepository.java  TariffResource.java
services/serving/src/main/java/ch/tarifhub/serving/search/: SearchResource.java  SemanticSearchService.java
services/serving/src/main/resources/: application.properties
services/serving/src/tarifhub_serving/: __init__.py  config.py  db.py  errors.py  explain.py  fhir.py  main.py  models.py  repository.py  telemetry.py
services/serving/src/test/java/ch/tarifhub/serving/: DeterminismBoundaryTest.java  TariffResourceTest.java
services/serving/tests/: _parity.py  conftest.py  test_api.py  test_app_lifespan.py  test_e5_ranking.py  test_errors.py  test_fhir.py  test_model_contract.py  test_observability.py  test_openapi.py  test_read_parity.py  test_repository.py  test_search_eval_metrics.py  test_serving_boundary.py  test_serving_db.py
services/serving/tests/fixtures/: e5_fr_ranking.json  record_e5_eval_corpus.py  record_e5_fr_ranking.py
tools/: approval_telegram.py  build_pdf.py  cas_baseline.json  cas_check.py  curate.sh  loop.sh  switch_model.sh
vault/: 00-index.md  decision-matrix.md  fazit-notes.md  vault-rules.md
(+259 files in other folders)
