[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifhub-ingest"
version = "0.1.0"
description = "TarifHub ingestion & AI-assisted harmonization service (pre-freeze pipeline + admin API)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "TarifHub" }]

# Runtime dependencies. The pipeline must run fully OFFLINE for tests:
# no live LLM, no network, SQLite by default.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "lxml>=5.1",
    "pdfplumber>=0.11",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pytest>=8.0",
]

[project.optional-dependencies]
# OPTIONAL — intentionally NOT installed for tests so the suite stays offline.
# Enable only when you wire the live Claude harmonizer / real e5 embeddings.
ai = [
    # "anthropic>=0.39",
    # "sentence-transformers>=2.7",
]
dev = [
    "ruff>=0.4",
]

[project.scripts]
tarifhub-ingest = "tarifhub_ingest.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
