[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifhub-ingest"
version = "0.1.0"
description = "tarifhub ingestion & AI-assisted harmonization service (pre-freeze pipeline + admin API)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "tarifhub" }]

# Runtime dependencies. The pipeline must run fully OFFLINE for tests:
# no live LLM, no network, SQLite by default. Only what the code imports:
# openpyxl parses the xlsx sources (no pandas layer), psycopg is the Postgres
# driver (embeddings are written as text literals, so the pgvector Python
# package is not needed), and the test-only tooling lives in the dev extra.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# OPTIONAL — intentionally NOT installed for tests so the suite stays offline.
# Enable only when you wire the live Claude harmonizer / real e5 embeddings.
ai = [
    "anthropic>=0.39",
    "sentence-transformers>=2.7",
]
# httpx is test-only here: fastapi.testclient (starlette) drives the app through it.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
tarifhub-ingest = "tarifhub_ingest.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
# Cover every rule family the source suppresses inline (# noqa: PLC0415, BLE001,
# N815, D102, PLR0913) so "all checks passed" means checked under the ruleset those
# suppressions reference, not the lighter E/F default. RUF100 keeps the suppressions
# honest: an unused noqa fails the lint.
select = ["E4", "E7", "E9", "F", "N", "BLE", "PLC", "PLR0913", "D102", "RUF100"]
# Domain exception names (TariffCodeNotFound, ReviewConflict, ...) are the documented
# problem+json contract; renaming them for the Error suffix would break the API docs,
# so the convention is waived explicitly rather than left unlinted.
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Tests import inside functions deliberately (env/monkeypatch first, import second)
# and fixture builders take many keyword parameters; docstring rules stay on for src.
"tests/**" = ["PLC0415", "D102", "PLR0913"]
# audit/ is below the guard_frozen line: an inline noqa cannot be added there, so the
# pre-existing 7-argument audit event signature is waived here instead.
"src/tarifhub_ingest/audit/*" = ["PLR0913"]
