[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifiq"
version = "0.1.0"
description = "TarifHub intelligence service (TarifIQ) — deterministic combinability/cumulation rules, TARMED↔TARDOC cross-walk, and rule validation over frozen tariff data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "TarifHub" }]

# Runtime dependencies. Rule EVALUATION must run fully OFFLINE for tests:
# no live LLM, no network. The frozen tariff store has a bundled offline stub.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.optional-dependencies]
# OPTIONAL — intentionally NOT installed for tests so the suite stays offline.
# An LLM is only ever used to *suggest* candidate rules/cross-walk entries PRE-FREEZE
# (see crosswalk/tarmed_tardoc.py::ai_rule_suggest), for a human to review and freeze.
# It never evaluates a rule and never computes a billing value.
ai = [
    # "anthropic>=0.39",
]
dev = [
    "ruff>=0.4",
]

[project.scripts]
tarifiq = "tarifiq.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
