[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifiq"
version = "0.1.0"
description = "tarifhub intelligence service (TarifIQ) — deterministic combinability/cumulation rules, TARMED↔TARDOC cross-walk, and rule validation over frozen tariff data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "tarifhub" }]

# Runtime dependencies. Rule EVALUATION must run fully OFFLINE for tests:
# no live LLM, no network. The frozen tariff store has a bundled offline stub.
# httpx is runtime here (frozen_client's live serving reads), unlike ingestion
# where it is test-only; pytest lives in the dev extra like the other services.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# OPTIONAL — intentionally NOT installed for tests so the suite stays offline.
# An LLM is only ever used to *suggest* candidate rules/cross-walk entries PRE-FREEZE
# (see crosswalk/tarmed_tardoc.py::ai_rule_suggest), for a human to review and freeze.
# It never evaluates a rule and never computes a billing value.
ai = [
    # "anthropic>=0.39",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
tarifiq = "tarifiq.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
# Cover every rule family the source suppresses inline (# noqa: PLC0415, BLE001,
# N815, D102, PLR0913) so "all checks passed" means checked under the ruleset those
# suppressions reference, not the lighter E/F default. RUF100 keeps the suppressions
# honest: an unused noqa fails the lint.
select = ["E4", "E7", "E9", "F", "N", "BLE", "PLC", "PLR0913", "D102", "RUF100"]
# Domain exception names (CrosswalkNotFound, ...) are the documented problem+json
# contract; renaming them for the Error suffix would break the API docs, so the
# convention is waived explicitly rather than left unlinted.
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Tests import inside functions deliberately (env/monkeypatch first, import second)
# and fixture builders take many keyword parameters; docstring rules stay on for src.
"tests/**" = ["PLC0415", "D102", "PLR0913"]
