[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifhub-mcp"
version = "0.1.0"
description = "TarifHub MCP server — read-only tools over the deterministic serving API for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "TarifHub" }]

# Thin proxy: the MCP SDK + an HTTP client. No DB, no model, no math libraries.
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Dev-only harness for the in-process integration suite. These build the REAL serving
# FastAPI app against a seeded temp SQLite DB and wire the MCP tools to it via
# httpx.ASGITransport — no network, no containers. They are NOT runtime dependencies:
# the runtime proxy stays exactly {mcp, httpx}. The serving + ingestion packages are
# editable path deps (the same pattern serving uses to import the canonical model);
# fastapi is declared explicitly because the harness instantiates the serving ASGI app.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fastapi>=0.110",
    "tarifhub-serving",
    "tarifhub-ingest",
]

[tool.uv]
# The published proxy supports Python >=3.10 (see requires-python). The dev harness,
# however, pulls in tarifhub-ingest which requires >=3.12, so resolve the dev/test env
# for 3.12+ only. This constrains resolution, NOT the proxy's runtime support metadata.
environments = ["python_full_version >= '3.12'"]

[tool.uv.sources]
# Editable path deps so a local change in serving/ingestion is picked up immediately.
# Test-only: serving builds the real app to integration-test the proxy against it, and
# the seeding fixtures use ingestion's repository/freeze helpers (exactly as
# services/serving/tests/conftest.py does). The MCP RUNTIME code imports neither.
tarifhub-serving = { path = "../serving", editable = true }
tarifhub-ingest = { path = "../ingestion", editable = true }

[tool.setuptools]
py-modules = ["server", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
