[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifhub-mcp"
version = "0.1.0"
description = "tarifhub MCP server — read-only tools over the deterministic serving API for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "tarifhub" }]

# Thin proxy: the MCP SDK + an HTTP client. No DB, no model, no math libraries.
# pydantic-settings backs the env-driven Settings (BaseSettings); it arrives transitively
# via mcp/pydantic but is declared explicitly because config.py imports it directly.
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# Dev-only harness for the in-process integration suite. These build the REAL serving
# FastAPI app against a seeded temp SQLite DB and wire the MCP tools to it via
# httpx.ASGITransport — no network, no containers. They are NOT runtime dependencies:
# the runtime proxy stays exactly {mcp, httpx}. The serving + ingestion packages are
# editable path deps (the same pattern serving uses to import the canonical model);
# fastapi is declared explicitly because the harness instantiates the serving ASGI app.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "fastapi>=0.110",
    "tarifhub-serving",
    "tarifhub-ingest",
]

[project.scripts]
tarifhub-mcp = "tarifhub_mcp.server:main"

[tool.uv]
# The published proxy supports Python >=3.10 (see requires-python). The dev harness,
# however, pulls in tarifhub-ingest which requires >=3.12, so resolve the dev/test env
# for 3.12+ only. This constrains resolution, NOT the proxy's runtime support metadata.
environments = ["python_full_version >= '3.12'"]

[tool.uv.sources]
# Editable path deps so a local change in serving/ingestion is picked up immediately.
# Test-only: serving builds the real app to integration-test the proxy against it, and
# the seeding fixtures use ingestion's repository/freeze helpers (exactly as
# services/serving/tests/conftest.py does). The MCP RUNTIME code imports neither.
tarifhub-serving = { path = "../serving", editable = true }
tarifhub-ingest = { path = "../ingestion", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
# Same explicit ruleset as the other three services (the inline suppressions the
# comment refers to live in their sources; the proxy itself carries none). RUF100
# keeps any future suppression honest: an unused noqa fails the lint.
select = ["E4", "E7", "E9", "F", "N", "BLE", "PLC", "PLR0913", "D102", "RUF100"]
# Domain exception names elsewhere in the repo are the documented problem+json
# contract; the waiver is kept uniform across all four services.
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Tests import inside functions deliberately (env/monkeypatch first, import second)
# and fixture builders take many keyword parameters; docstring rules stay on for src.
"tests/**" = ["PLC0415", "D102", "PLR0913"]
