[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarifhub-serving"
version = "0.1.0"
description = "tarifhub L1 serving service — deterministic read API over frozen tariff records (FastAPI)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "tarifhub" }]

# Runtime dependencies. The service is strictly READ-ONLY over frozen records and
# must run fully OFFLINE for tests (SQLite mirror + stub embedder, no network).
# It imports the canonical TariffRecord and the embedder from the ingestion package
# (one canonical model end-to-end) — never an LLM client.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # Env-sourced Settings (config.py). Same family/version floor as ingestion; imports
    # no LLM client, so it stays clear of the billing value path (boundary-tested).
    "pydantic-settings>=2.2",
    # db.py imports psycopg directly for the Postgres read path; declare it explicitly
    # rather than relying on it transitively via tarifhub-ingest. Same family as ingestion.
    # The `pool` extra pulls in psycopg_pool for the per-request connection pool (db.py
    # create_pool). SQLite needs no pool, so that import stays lazy on the Postgres leg.
    "psycopg[binary,pool]>=3.1",
    "tarifhub-ingest",
    # OpenTelemetry: observe-only request tracing + metrics on the read API. These
    # packages instrument and export spans/metrics; none is an LLM client and none is
    # on the billing value path (see tarifhub_serving.telemetry, boundary-tested by
    # tests/test_serving_boundary.py). The OTLP exporter is inert unless
    # OTEL_EXPORTER_OTLP_ENDPOINT is set, so the offline suite needs no collector.
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.uv.sources]
# One canonical TariffRecord end-to-end: import the model + embedder from ingestion,
# never duplicate them. Editable path dependency so a local change is picked up.
tarifhub-ingest = { path = "../ingestion", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
# Cover every rule family the source suppresses inline (# noqa: PLC0415, BLE001,
# N815, D102, PLR0913) so "all checks passed" means checked under the ruleset those
# suppressions reference, not the lighter E/F default. RUF100 keeps the suppressions
# honest: an unused noqa fails the lint.
select = ["E4", "E7", "E9", "F", "N", "BLE", "PLC", "PLR0913", "D102", "RUF100"]
# Domain exception names (TariffNotFound, SearchBackendUnavailable, ...) are the
# documented problem+json contract; renaming them for the Error suffix would break
# the API docs, so the convention is waived explicitly rather than left unlinted.
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Tests import inside functions deliberately (env/monkeypatch first, import second)
# and fixture builders take many keyword parameters; docstring rules stay on for src.
"tests/**" = ["PLC0415", "D102", "PLR0913"]
# FHIR R4 wire fields (resourceType, priceComponent, ...) are camelCase by the FHIR
# specification; the Pydantic models mirror the wire names verbatim.
"src/tarifhub_serving/fhir.py" = ["N815"]
